p3/confs/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  type: NodePort
  ports:
  - port: 8888
    nodePort: 31888
    targetPort: app-port
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: playground
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
          name: app-port
        resources:
          requests:
            memory: "150Mi"
            cpu: "200m"
          limits:
            memory: "300Mi"
            cpu: "500m"
