p3/confs/nodePort-argocd.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-nodeport
  namespace: argocd
spec:
  selector:
    app.kubernetes.io/name: argocd-server
  type: NodePort
  ports:
  - name: https
    port: 8443
    nodePort: 30443
    targetPort: 8080
    protocol: TCP
  - name: http
    port: 8080
    nodePort: 30080
    targetPort: 8080
    protocol: TCP
